--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Watched shows/films</title>
 </head>
 <body>
+    <!-- watched -->
     <h1>Watched shows and movies</h1>
     <nav>
         <ul>
