Added Synopsis and picture to Lupin page

--- a/Shows/Lupin.html
+++ b/Shows/Lupin.html
@@ -7,6 +7,19 @@
 </head>
 <body>
     <h1>Lupin</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/en/f/f1/Lupin_logo.png">
+    <p>Lupin is a French mystery thriller streaming television series created by George Kay and 
+        François Uzan that premiered on Netflix on 8 January 2021</p>
+    <p>
+        The story follows professional thief Assane Diop, the only son of an
+         immigrant from Senegal who had come to France to seek a better life for himself and
+          his child. Assane's father is framed for the theft of an expensive diamond necklace by 
+          his employer, the wealthy and powerful Hubert Pellegrini, and dies in his prison cell,
+           leaving the fourteen-year-old Assane to fend for himself on the streets of Paris. 
+           Twenty-five years later, inspired by a book about gentleman thief Arsène Lupin his father had 
+           given him on his birthday, Assane sets out to get revenge on the Pellegrini family,
+            using his charisma and mastery of thievery, subterfuge, and disguise to expose Hubert's crimes. 
+    </p>
     <!-- Lupin -->
 </body>
 </html>
