Added Synopsis and picture to Squid game page. Also added Alt tag to Lupin img for Screen reader

--- a/Shows/Lupin.html
+++ b/Shows/Lupin.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <h1>Lupin</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/en/f/f1/Lupin_logo.png">
-    <p>Lupin is a French mystery thriller streaming television series created by George Kay and 
-        François Uzan that premiered on Netflix on 8 January 2021</p>
+    <img src="https://upload.wikimedia.org/wikipedia/en/f/f1/Lupin_logo.png" alt="The words Lupin in all caps">
+    <p>
+        Lupin is a French mystery thriller streaming television series created by George Kay and 
+        François Uzan that premiered on Netflix on 8 January 2021
+    </p>
     <p>
         The story follows professional thief Assane Diop, the only son of an
          immigrant from Senegal who had come to France to seek a better life for himself and
@@ -20,6 +22,5 @@
            given him on his birthday, Assane sets out to get revenge on the Pellegrini family,
             using his charisma and mastery of thievery, subterfuge, and disguise to expose Hubert's crimes. 
     </p>
-    <!-- Lupin -->
 </body>
 </html>
