--- a/Shows/Squidgame.html
+++ b/Shows/Squidgame.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <h1>Squid game</h1>
-      <!-- squidgame -->
+    <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/Squid_Game.jpg" alt="Picture of squid game title in Korean with the main cast">
+    <p> 
+        Squid Game is a South Korean television series created by Hwang Dong-hyuk for Netflix   
+    </p>
+    <p>
+        Seong Gi-hun, a divorced father and indebted gambler who lives with his elderly mother,
+         is invited to play a series of children's games for a chance at a large cash prize. 
+         Accepting the offer, he is taken to an unknown location where he finds himself 
+         among 455 other players who are all in deep financial trouble. 
+         The players are made to wear green tracksuits and are kept under watch at all times 
+         by masked guards in pink jumpsuits, with the games overseen by the Front Man, who 
+         wears a black mask and black uniform. The players soon discover that losing a game 
+         results in their deaths, with each death contributing ₩100 million to the potential 
+         ₩45.6 billion grand prize 
+    </p>
 </body>
 </html>
