Fixed spelling mistakes in navagation bar

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <nav>
         <ul>
             <li>
-                <a target="_blank" href="./Shows/Lupin.html" rel="noopener noreferrer">Lupim</a>
+                <a target="_blank" href="./Shows/Lupin.html" rel="noopener noreferrer">Lupin</a>
             </li>
             <li>
-                <a target="_blank" href="./Shows/Squidgame.html" rel="noopener noreferrer">Lupim</a>
+                <a target="_blank" href="./Shows/Squidgame.html" rel="noopener noreferrer">Squid game</a>
             </li>
             <li>
-                <a target="_blank" href="./Shows/YuYuHakusho.html" rel="noopener noreferrer">Lupim</a>
+                <a target="_blank" href="./Shows/YuYuHakusho.html" rel="noopener noreferrer">YuYu Hakusho</a>
             </li>
         </ul>
     </nav>
