Added YuYu Hakusho image and synosis

--- a/Shows/YuYuHakusho.html
+++ b/Shows/YuYuHakusho.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>YuYu Hakusho</h1>
-    <!-- yuyu -->
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/7f/Yu_Yu_Hakusho_%28TV_series%29.jpeg" alt="Picture of YuYu Hakusho title with the main cast and adversary">
+    <p> 
+        YuYu Hakusho is a Japanese action fantasy adventure 
+        streaming television series developed by Akira Morii and Kazutaka Sakamoto for Netflix   
+    </p>
+    <p>
+        The story revolves around Yusuke Urameshi, a delinquent junior high school student
+         who spends his days getting into fights. He dies after saving a child in a car accident, 
+         and gets resurrected to serve as an investigator of the supernatural.
+    </p>
 </body>
 </html>
