Added images folder with image for index.html, index.html added image to make it look nicer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <!-- watched -->
     <h1>Watched shows and movies</h1>
+    <hr>
+    <img src="./Images/Watched.jpg" alt="Man holding remote pointing at television">
     <nav>
         <ul>
             <li>
