added basic CSS style sheet and applied it to index.html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watched shows/films</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- watched -->
-    <h1>Watched shows and movies</h1>
+    <h1 class="header font">Watched shows and movies</h1>
     <hr>
     <img src="./Images/Watched.jpg" alt="Man holding remote pointing at television">
-    <nav>
+    <nav class="menu font">
         <ul>
             <li>
                 <a target="_blank" href="./Shows/Lupin.html" rel="noopener noreferrer">Lupin</a>
