Link stylesheets on all shows and create new class for the titles in stylesheet and assigned them to each title

--- a/Shows/Lupin.html
+++ b/Shows/Lupin.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watched shows/films</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Lupin</h1>
+    <h1 class="mainheader title font">Lupin</h1>
     <img src="https://upload.wikimedia.org/wikipedia/en/f/f1/Lupin_logo.png" alt="The words Lupin in all caps">
     <p>
         Lupin is a French mystery thriller streaming television series created by George Kay and 
