--- a/Shows/Squidgame.html
+++ b/Shows/Squidgame.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watched shows/films</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Squid game</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/Squid_Game.jpg" alt="Picture of squid game title in Korean with the main cast">
+    <h1 class="mainheader title font">Squid game</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/Squid_Game.jpg" 
+        alt="Picture of squid game title in Korean with the main cast">
     <p> 
         Squid Game is a South Korean television series created by Hwang Dong-hyuk for Netflix   
     </p>
