--- a/Shows/YuYuHakusho.html
+++ b/Shows/YuYuHakusho.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watched shows/films</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>YuYu Hakusho</h1>
+    <h1 class="mainheader title font">YuYu Hakusho</h1>
     <img src="https://upload.wikimedia.org/wikipedia/en/7/7f/Yu_Yu_Hakusho_%28TV_series%29.jpeg" alt="Picture of YuYu Hakusho title with the main cast and adversary">
     <p> 
         YuYu Hakusho is a Japanese action fantasy adventure 
