--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- watched -->
-    <h1 class="header font">Watched shows and movies</h1>
+    <h1 class="mainheader font">Watched shows and movies</h1>
     <hr>
     <img src="./Images/Watched.jpg" alt="Man holding remote pointing at television">
     <nav class="menu font">
