re-designed the menu and added more divs in index.html, style.css has been adjusted to fit new menu

--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
 </head>
 <body>
     <!-- watched -->
-    <h1 class="mainheader font">Watched shows and movies</h1>
-    <hr>
-    <img src="./Images/Watched.jpg" alt="Man holding remote pointing at television">
-    <nav class="menu font">
+    <div>
+        <h1 class="mainheader font">   
+            Watched shows and movies
+        </h1>
+    </div>
+    <div class="test"> 
+        <div class="menu font">
+            <a target="_blank" href="./Shows/Lupin.html" rel="noopener noreferrer">Lupin</a>
+        </div>
+        <div class="menu font">
+            <a target="_blank" href="./Shows/Squidgame.html" rel="noopener noreferrer">Squid game</a>
+        </div>
+        <div class="menu font">
+            <a target="_blank" href="./Shows/YuYuHakusho.html" rel="noopener noreferrer">YuYu Hakusho</a>
+        </div> 
+    </div> 
+    <!-- <nav class="menu font">
         <ul>
-            <li>
+            <li class="menu font">
                 <a target="_blank" href="./Shows/Lupin.html" rel="noopener noreferrer">Lupin</a>
             </li>
             <li>
@@ -23,6 +36,10 @@
                 <a target="_blank" href="./Shows/YuYuHakusho.html" rel="noopener noreferrer">YuYu Hakusho</a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
+    <hr>
+    <div>
+        <img src="./Images/Watched.jpg" alt="Man holding remote pointing at television">
+    </div>
 </body>
 </html>
