testing get commit if bugged for me

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- watched -->
+    <!-- test git commit-->
     <div>
         <h1 class="mainheader font">   
             Watched shows and movies
@@ -15,13 +15,19 @@
     </div>
     <div class="test"> 
         <div class="menu font">
-            <a target="_blank" href="./Shows/Lupin.html" rel="noopener noreferrer">Lupin</a>
+            <a target="_blank" href="./Shows/Lupin.html" rel="noopener noreferrer">
+                Lupin
+            </a>
         </div>
         <div class="menu font">
-            <a target="_blank" href="./Shows/Squidgame.html" rel="noopener noreferrer">Squid game</a>
+            <a target="_blank" href="./Shows/Squidgame.html" rel="noopener noreferrer">
+                Squid game
+            </a>
         </div>
         <div class="menu font">
-            <a target="_blank" href="./Shows/YuYuHakusho.html" rel="noopener noreferrer">YuYu Hakusho</a>
+            <a target="_blank" href="./Shows/YuYuHakusho.html" rel="noopener noreferrer">
+                YuYu Hakusho
+            </a>
         </div> 
     </div> 
     <!-- <nav class="menu font">
